# my-opencv-project

./: .gitignore  hello.py  main.py  pyproject.toml  test.py
Line/: line_track.py
QRcode/: QRcodetest.py  generate.py  recognize.py
Serial/: Serialtest.py  communicate.py
